--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ]
           },
@@ -57,7 +58,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -91,7 +98,8 @@
                 "input": "public"
               }
             ],
-            "styles": [
+             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ]
           }
